Fix overflow in X axis

--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 nav {
-  margin-left: 40%;
+  margin-left: 36%;
   width: 30%;
 }
 
